Time: 30 ms (66.7%), Space: 51.2 MB (75.52%) - LeetHub